src/objects/Credit_Score__c.object
<CustomObject>
    <fields>
        <fullName>Accepted_Facilities__c</fullName>
        <label>Accepted Facilities</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecisionEnginePerformed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DecisionEnginePerformed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Decision_ID__c</fullName>
        <label>Decision ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Reason__c</fullName>
        <label>Decision Reason</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Decision__c</fullName>
        <label>Decision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBS_Number__c</fullName>
        <formula>Prospect_Customer__r.EBS_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EBS Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Credit Scores</relationshipLabel>
        <relationshipName>Credit_Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prospect_Customer__c</fullName>
        <label>Prospect/Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credit Scores</relationshipLabel>
        <relationshipName>Credit_Scores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rejected_Facilities__c</fullName>
        <label>Rejected Facilities</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierScore__c</fullName>
        <label>SupplierScore</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Credit Score</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>